18 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/*: Removed unused imports & reformatted code.

 * clarin-angular/tsconfig.json: Tests with partial AOT compilation.

17 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json:
 * clarin-angular/angular.json:
 * build_all.sh: Updated to latest angular, switched build to production mode,
 updated various packages to latest versions.

 * clarin-angular/src/css/clarin-annschema.scss: Various fixes for Button
 Annotator.

 * clarin-angular/src/app/services/text-widget/text-widget.service.ts: Changed
 notification order in matchAnnotationsToSchema().

 * clarin-angular/src/app/ng-matero/core/authentication/auth.service.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/interface.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/login.service.ts:
 Updated login methods to match updated ng-matero.

 * clarin-angular/src/styles/*:
 * clarin-angular/src/app/ng-matero/*: Update to latest ng-matero (12.1.1).

17 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/css/clarin-annschema.scss: Fixed spacing among cells.

 * backend/clarin/database/migrations/2021_08_12_114251_modify_open_documents_primary_keys.php:
 * Backend: Modified primary key in open_documents table, so as to allow
 multiple open documents for each user.

09 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 Fixes in the way open Documents are handled. Old behaviour was buggy (still
 buggy in the AngularJS front-end).

 * clarin-angular/src/app/services/restore-annotation-service/restore-annotation.service.ts:
 * backend/clarin/app/Http/Controllers/OpenDocumentController.php: Added the
 ability to set db_interactions for all users of the document to 0.

 * clarin-angular/src/app/services/sse-service/sse.service.ts: Fixed missing