@@ -1,4 +1,12 @@
 18 August 2021 Petasis George <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.html:
+ * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.ts:
+ * clarin-angular/src/css/clarin-material.scss:
+ * clarin-angular/src/assets/i18n/el-GR.json:
+ * clarin-angular/src/assets/i18n/en-US.json: New feature: searching
+ (filtering) of annotations (based on attribute values) in Annotation
+ Visualizer.
+
  * clarin-angular/src/app/*: Removed unused imports & reformatted code.
 
  * clarin-angular/tsconfig.json: Tests with partial AOT compilation.
